# SubModMax

./: .gitignore  README.MD  TODO.txt  actionTargetGenerators.py  algorithms.py  globals.py  helpers.py  informationSharing.py  pyproject.toml  scenario.py  scenarioBuilders.py  scenarioCollection.py  simulations.py  simulators.py  visualize.py
RISB/: 3AgentSummary.csv  4AgentSummary.csv  LPGEN_EXPLAINER.md  lp_generator.py
RISB/logs/3AgentAug7-2025/: comparison.txt
RISB/logs/4AgentAug7-2025/: comparison.txt
RISB/logs/5AgentPrunedAug7-2025/: summary.txt
examples/: ex1.py  ex2.py
scripts/: alg_comp.py
submodmax/: algorithms.py  globals.py  information_sharing_rules.py  scenario_builders.py  simulators.py  test.py  visualize.py
submodmax/objects/: assignment.py  scenario.py  scenario_collection.py
submodmax/utils/: assignment_utils.py  scenario_utils.py  statistics_utils.py
